force-app/main/default/objects/Einstein_Insight__c/Einstein_Insight__c.object-meta.xml
<CustomObject>
    <label>Einstein Insight</label>
    <nameField>
        <label>Einstein Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>