force-app/main/default/objects/Einstein_Insight__c/fields/Aggregated_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Aggregated_Sentiment__c</fullName>
    <label>Aggregated Sentiment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>