force-app/main/default/objects/Einstein_Insight__c/fields/Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Einstein Insights</relationshipLabel>
    <relationshipName>Einstein_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>