force-app/main/default/objects/Einstein_Insight__c/fields/Entities__c.field-meta.xml
<CustomField>
    <fullName>Entities__c</fullName>
    <label>Entities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>