force-app/main/default/objects/Einstein_Insight__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Einstein Insights</relationshipLabel>
    <relationshipName>Einstein_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>