force-app/main/default/objects/Einstein_Insight__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>