force-app/main/default/objects/Einstein_Insight__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>