force-app/main/default/objects/Einstein_Insight__c/fields/Sentiment_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Confidence__c</fullName>
    <label>Sentiment Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>