force-app/main/default/objects/Einstein_Insight__c/fields/Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Einstein Insights</relationshipLabel>
    <relationshipName>Einstein_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>